feat: Adiciona funcionalidade de administração
- Implementa AdminUserInitializer para criar admin padrão
- Adiciona endpoints de gerenciamento de usuários
- Atualiza entidades e repositórios
- Adiciona configurações de segurança para rotas de admin